Reworked templates