@@ -8,8 +8,20 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = '11' // Change this to your desired Java version
-targetCompatibility = '11' // Change this to your desired Java version
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
+tasks.withType(JavaCompile) {
+    options.release.set(11)
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+}
 
 repositories {
     mavenCentral()
@@ -36,8 +48,6 @@ dependencies {
     //Intellij core
     implementation group: 'com.android.tools.external.com-intellij', name: 'intellij-core', version: '30.1.0-alpha10'
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
     //Kootstrap
     implementation group: 'org.apache.maven', name: 'maven-model-builder', version: '3.3.9'
@@ -92,7 +102,6 @@ task(runFuzzer, dependsOn: 'classes', type: JavaExec) {
     def privateKeyPass = project.hasProperty('privateKeyPass') ? project.privateKeyPass : null
     environment('PRIVATE_KEY_PATH', privateKeyPath)
     environment('PRIVATE_KEY_PASS', privateKeyPass)
-    println(programArgs)
     argsString programArgs
     jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED"
 }
@@ -105,7 +114,15 @@ task(runInfFuzzer, dependsOn: 'classes', type: JavaExec) {
     def privateKeyPass = project.hasProperty('privateKeyPass') ? project.privateKeyPass : null
     environment('PRIVATE_KEY_PATH', privateKeyPath)
     environment('PRIVATE_KEY_PASS', privateKeyPass)
-    println(programArgs)
+    argsString programArgs
+    jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED"
+}
+
+
+task(checkTemplates, dependsOn: 'classes', type: JavaExec) {
+    main = 'com.spbpu.bbfinfrastructure.test.TemplatesCheckerKt'
+    classpath = sourceSets.main.runtimeClasspath
+    def programArgs = project.hasProperty('programArgs') ? project.programArgs : ""
     argsString programArgs
     jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED"
 }
